Compilers/iscore/_build/src/parser.automaton
State 0:
main' -> . main [ # ]
-- On LESS shift to state 1
-- On main shift to state 149

State 1:
main -> LESS . SCENARIO NAME EQ STRING GREATER body LESS SLASH SCENARIO GREATER EOF [ # ]
-- On SCENARIO shift to state 2

State 2:
main -> LESS SCENARIO . NAME EQ STRING GREATER body LESS SLASH SCENARIO GREATER EOF [ # ]
-- On NAME shift to state 3

State 3:
main -> LESS SCENARIO NAME . EQ STRING GREATER body LESS SLASH SCENARIO GREATER EOF [ # ]
-- On EQ shift to state 4

State 4:
main -> LESS SCENARIO NAME EQ . STRING GREATER body LESS SLASH SCENARIO GREATER EOF [ # ]
-- On STRING shift to state 5

State 5:
main -> LESS SCENARIO NAME EQ STRING . GREATER body LESS SLASH SCENARIO GREATER EOF [ # ]
-- On GREATER shift to state 6

State 6:
main -> LESS SCENARIO NAME EQ STRING GREATER . body LESS SLASH SCENARIO GREATER EOF [ # ]
-- On body shift to state 7
-- On LESS reduce production body -> 

State 7:
body -> body . event [ LESS ]
body -> body . automation [ LESS ]
body -> body . interval [ LESS ]
body -> body . scenario [ LESS ]
body -> body . condition [ LESS ]
main -> LESS SCENARIO NAME EQ STRING GREATER body . LESS SLASH SCENARIO GREATER EOF [ # ]
-- On LESS shift to state 8
-- On scenario shift to state 144
-- On interval shift to state 145
-- On event shift to state 146
-- On condition shift to state 147
-- On automation shift to state 148

State 8:
automation -> LESS . AUTOMATION NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
automation -> LESS . AUTOMATION NAME EQ STRING START EQ STRING END EQ STRING GREATER curve LESS SLASH AUTOMATION GREATER [ LESS ]
condition -> LESS . CONDITION NAME EQ STRING DISPOSE EQ STRING GREATER case LESS SLASH CONDITION GREATER [ LESS ]
event -> LESS . STARTEVENT NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS . ENDEVENT NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS . EVENT NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS . EVENT NAME EQ STRING DATE EQ STRING CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS . EVENT NAME EQ STRING DATE EQ STRING GREATER command LESS SLASH EVENT GREATER [ LESS ]
interval -> LESS . INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS . INTERVAL NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
main -> LESS SCENARIO NAME EQ STRING GREATER body LESS . SLASH SCENARIO GREATER EOF [ # ]
scenario -> LESS . SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS . SCENARIO NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On STARTEVENT shift to state 9
-- On SLASH shift to state 18
-- On SCENARIO shift to state 22
-- On INTERVAL shift to state 40
-- On EVENT shift to state 60
-- On ENDEVENT shift to state 91
-- On CONDITION shift to state 100
-- On AUTOMATION shift to state 126

State 9:
event -> LESS STARTEVENT . NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
-- On NAME shift to state 10

State 10:
event -> LESS STARTEVENT NAME . EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 11

State 11:
event -> LESS STARTEVENT NAME EQ . STRING DATE EQ STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 12

State 12:
event -> LESS STARTEVENT NAME EQ STRING . DATE EQ STRING SLASH GREATER [ LESS ]
-- On DATE shift to state 13

State 13:
event -> LESS STARTEVENT NAME EQ STRING DATE . EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 14

State 14:
event -> LESS STARTEVENT NAME EQ STRING DATE EQ . STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 15

State 15:
event -> LESS STARTEVENT NAME EQ STRING DATE EQ STRING . SLASH GREATER [ LESS ]
-- On SLASH shift to state 16

State 16:
event -> LESS STARTEVENT NAME EQ STRING DATE EQ STRING SLASH . GREATER [ LESS ]
-- On GREATER shift to state 17

State 17:
event -> LESS STARTEVENT NAME EQ STRING DATE EQ STRING SLASH GREATER . [ LESS ]
-- On LESS reduce production event -> LESS STARTEVENT NAME EQ STRING DATE EQ STRING SLASH GREATER 

State 18:
main -> LESS SCENARIO NAME EQ STRING GREATER body LESS SLASH . SCENARIO GREATER EOF [ # ]
-- On SCENARIO shift to state 19

State 19:
main -> LESS SCENARIO NAME EQ STRING GREATER body LESS SLASH SCENARIO . GREATER EOF [ # ]
-- On GREATER shift to state 20

State 20:
main -> LESS SCENARIO NAME EQ STRING GREATER body LESS SLASH SCENARIO GREATER . EOF [ # ]
-- On EOF shift to state 21

State 21:
main -> LESS SCENARIO NAME EQ STRING GREATER body LESS SLASH SCENARIO GREATER EOF . [ # ]
-- On # reduce production main -> LESS SCENARIO NAME EQ STRING GREATER body LESS SLASH SCENARIO GREATER EOF 

State 22:
scenario -> LESS SCENARIO . NAME EQ STRING START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO . NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On NAME shift to state 23

State 23:
scenario -> LESS SCENARIO NAME . EQ STRING START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME . EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 24

State 24:
scenario -> LESS SCENARIO NAME EQ . STRING START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ . STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 25

State 25:
scenario -> LESS SCENARIO NAME EQ STRING . START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING . START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On START shift to state 26

State 26:
scenario -> LESS SCENARIO NAME EQ STRING START . EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING START . EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 27

State 27:
scenario -> LESS SCENARIO NAME EQ STRING START EQ . STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING START EQ . STRING END EQ STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 28

State 28:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING . END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING . END EQ STRING SLASH GREATER [ LESS ]
-- On END shift to state 29

State 29:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END . EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END . EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 30

State 30:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ . STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ . STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 31

State 31:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING . GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING . SLASH GREATER [ LESS ]
-- On SLASH shift to state 32
-- On GREATER shift to state 34

State 32:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING SLASH . GREATER [ LESS ]
-- On GREATER shift to state 33

State 33:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER . [ LESS ]
-- On LESS reduce production scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER 

State 34:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER . body LESS SLASH SCENARIO GREATER [ LESS ]
-- On body shift to state 35
-- On LESS reduce production body -> 

State 35:
body -> body . event [ LESS ]
body -> body . automation [ LESS ]
body -> body . interval [ LESS ]
body -> body . scenario [ LESS ]
body -> body . condition [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER body . LESS SLASH SCENARIO GREATER [ LESS ]
-- On LESS shift to state 36
-- On scenario shift to state 144
-- On interval shift to state 145
-- On event shift to state 146
-- On condition shift to state 147
-- On automation shift to state 148

State 36:
automation -> LESS . AUTOMATION NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
automation -> LESS . AUTOMATION NAME EQ STRING START EQ STRING END EQ STRING GREATER curve LESS SLASH AUTOMATION GREATER [ LESS ]
condition -> LESS . CONDITION NAME EQ STRING DISPOSE EQ STRING GREATER case LESS SLASH CONDITION GREATER [ LESS ]
event -> LESS . STARTEVENT NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS . ENDEVENT NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS . EVENT NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS . EVENT NAME EQ STRING DATE EQ STRING CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS . EVENT NAME EQ STRING DATE EQ STRING GREATER command LESS SLASH EVENT GREATER [ LESS ]
interval -> LESS . INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS . INTERVAL NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
scenario -> LESS . SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER body LESS . SLASH SCENARIO GREATER [ LESS ]
scenario -> LESS . SCENARIO NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On STARTEVENT shift to state 9
-- On SLASH shift to state 37
-- On SCENARIO shift to state 22
-- On INTERVAL shift to state 40
-- On EVENT shift to state 60
-- On ENDEVENT shift to state 91
-- On CONDITION shift to state 100
-- On AUTOMATION shift to state 126

State 37:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER body LESS SLASH . SCENARIO GREATER [ LESS ]
-- On SCENARIO shift to state 38

State 38:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO . GREATER [ LESS ]
-- On GREATER shift to state 39

State 39:
scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER . [ LESS ]
-- On LESS reduce production scenario -> LESS SCENARIO NAME EQ STRING START EQ STRING END EQ STRING GREATER body LESS SLASH SCENARIO GREATER 

State 40:
interval -> LESS INTERVAL . NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL . NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On NAME shift to state 41

State 41:
interval -> LESS INTERVAL NAME . EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME . EQ STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 42

State 42:
interval -> LESS INTERVAL NAME EQ . STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME EQ . STRING START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 43

State 43:
interval -> LESS INTERVAL NAME EQ STRING . START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME EQ STRING . START EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On START shift to state 44

State 44:
interval -> LESS INTERVAL NAME EQ STRING START . EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME EQ STRING START . EQ STRING END EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 45

State 45:
interval -> LESS INTERVAL NAME EQ STRING START EQ . STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME EQ STRING START EQ . STRING END EQ STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 46

State 46:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING . END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING . END EQ STRING SLASH GREATER [ LESS ]
-- On END shift to state 47

State 47:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END . EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END . EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 48

State 48:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ . STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ . STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 49

State 49:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING . DMIN EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING . SLASH GREATER [ LESS ]
-- On SLASH shift to state 50
-- On DMIN shift to state 52

State 50:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING SLASH . GREATER [ LESS ]
-- On GREATER shift to state 51

State 51:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER . [ LESS ]
-- On LESS reduce production interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING SLASH GREATER 

State 52:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN . EQ STRING DMAX EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 53

State 53:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ . STRING DMAX EQ STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 54

State 54:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING . DMAX EQ STRING SLASH GREATER [ LESS ]
-- On DMAX shift to state 55

State 55:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX . EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 56

State 56:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ . STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 57

State 57:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING . SLASH GREATER [ LESS ]
-- On SLASH shift to state 58

State 58:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH . GREATER [ LESS ]
-- On GREATER shift to state 59

State 59:
interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER . [ LESS ]
-- On LESS reduce production interval -> LESS INTERVAL NAME EQ STRING START EQ STRING END EQ STRING DMIN EQ STRING DMAX EQ STRING SLASH GREATER 

State 60:
event -> LESS EVENT . NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT . NAME EQ STRING DATE EQ STRING CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT . NAME EQ STRING DATE EQ STRING GREATER command LESS SLASH EVENT GREATER [ LESS ]
-- On NAME shift to state 61

State 61:
event -> LESS EVENT NAME . EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME . EQ STRING DATE EQ STRING CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME . EQ STRING DATE EQ STRING GREATER command LESS SLASH EVENT GREATER [ LESS ]
-- On EQ shift to state 62

State 62:
event -> LESS EVENT NAME EQ . STRING DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ . STRING DATE EQ STRING CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ . STRING DATE EQ STRING GREATER command LESS SLASH EVENT GREATER [ LESS ]
-- On STRING shift to state 63

State 63:
event -> LESS EVENT NAME EQ STRING . DATE EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ STRING . DATE EQ STRING CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ STRING . DATE EQ STRING GREATER command LESS SLASH EVENT GREATER [ LESS ]
-- On DATE shift to state 64

State 64:
event -> LESS EVENT NAME EQ STRING DATE . EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ STRING DATE . EQ STRING CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ STRING DATE . EQ STRING GREATER command LESS SLASH EVENT GREATER [ LESS ]
-- On EQ shift to state 65

State 65:
event -> LESS EVENT NAME EQ STRING DATE EQ . STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ STRING DATE EQ . STRING CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ STRING DATE EQ . STRING GREATER command LESS SLASH EVENT GREATER [ LESS ]
-- On STRING shift to state 66

State 66:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING . SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ STRING DATE EQ STRING . CONDITION EQ STRING SLASH GREATER [ LESS ]
event -> LESS EVENT NAME EQ STRING DATE EQ STRING . GREATER command LESS SLASH EVENT GREATER [ LESS ]
-- On SLASH shift to state 67
-- On GREATER shift to state 69
-- On CONDITION shift to state 86

State 67:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING SLASH . GREATER [ LESS ]
-- On GREATER shift to state 68

State 68:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING SLASH GREATER . [ LESS ]
-- On LESS reduce production event -> LESS EVENT NAME EQ STRING DATE EQ STRING SLASH GREATER 

State 69:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING GREATER . command LESS SLASH EVENT GREATER [ LESS ]
-- On LESS shift to state 70
-- On command shift to state 81

State 70:
command -> LESS . COMMAND ADDRESS EQ STRING GREATER INT LESS SLASH COMMAND GREATER [ LESS ]
-- On COMMAND shift to state 71

State 71:
command -> LESS COMMAND . ADDRESS EQ STRING GREATER INT LESS SLASH COMMAND GREATER [ LESS ]
-- On ADDRESS shift to state 72

State 72:
command -> LESS COMMAND ADDRESS . EQ STRING GREATER INT LESS SLASH COMMAND GREATER [ LESS ]
-- On EQ shift to state 73

State 73:
command -> LESS COMMAND ADDRESS EQ . STRING GREATER INT LESS SLASH COMMAND GREATER [ LESS ]
-- On STRING shift to state 74

State 74:
command -> LESS COMMAND ADDRESS EQ STRING . GREATER INT LESS SLASH COMMAND GREATER [ LESS ]
-- On GREATER shift to state 75

State 75:
command -> LESS COMMAND ADDRESS EQ STRING GREATER . INT LESS SLASH COMMAND GREATER [ LESS ]
-- On INT shift to state 76

State 76:
command -> LESS COMMAND ADDRESS EQ STRING GREATER INT . LESS SLASH COMMAND GREATER [ LESS ]
-- On LESS shift to state 77

State 77:
command -> LESS COMMAND ADDRESS EQ STRING GREATER INT LESS . SLASH COMMAND GREATER [ LESS ]
-- On SLASH shift to state 78

State 78:
command -> LESS COMMAND ADDRESS EQ STRING GREATER INT LESS SLASH . COMMAND GREATER [ LESS ]
-- On COMMAND shift to state 79

State 79:
command -> LESS COMMAND ADDRESS EQ STRING GREATER INT LESS SLASH COMMAND . GREATER [ LESS ]
-- On GREATER shift to state 80

State 80:
command -> LESS COMMAND ADDRESS EQ STRING GREATER INT LESS SLASH COMMAND GREATER . [ LESS ]
-- On LESS reduce production command -> LESS COMMAND ADDRESS EQ STRING GREATER INT LESS SLASH COMMAND GREATER 

State 81:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING GREATER command . LESS SLASH EVENT GREATER [ LESS ]
-- On LESS shift to state 82

State 82:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING GREATER command LESS . SLASH EVENT GREATER [ LESS ]
-- On SLASH shift to state 83

State 83:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING GREATER command LESS SLASH . EVENT GREATER [ LESS ]
-- On EVENT shift to state 84

State 84:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING GREATER command LESS SLASH EVENT . GREATER [ LESS ]
-- On GREATER shift to state 85

State 85:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING GREATER command LESS SLASH EVENT GREATER . [ LESS ]
-- On LESS reduce production event -> LESS EVENT NAME EQ STRING DATE EQ STRING GREATER command LESS SLASH EVENT GREATER 

State 86:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING CONDITION . EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 87

State 87:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING CONDITION EQ . STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 88

State 88:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING CONDITION EQ STRING . SLASH GREATER [ LESS ]
-- On SLASH shift to state 89

State 89:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING CONDITION EQ STRING SLASH . GREATER [ LESS ]
-- On GREATER shift to state 90

State 90:
event -> LESS EVENT NAME EQ STRING DATE EQ STRING CONDITION EQ STRING SLASH GREATER . [ LESS ]
-- On LESS reduce production event -> LESS EVENT NAME EQ STRING DATE EQ STRING CONDITION EQ STRING SLASH GREATER 

State 91:
event -> LESS ENDEVENT . NAME EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
-- On NAME shift to state 92

State 92:
event -> LESS ENDEVENT NAME . EQ STRING DATE EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 93

State 93:
event -> LESS ENDEVENT NAME EQ . STRING DATE EQ STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 94

State 94:
event -> LESS ENDEVENT NAME EQ STRING . DATE EQ STRING SLASH GREATER [ LESS ]
-- On DATE shift to state 95

State 95:
event -> LESS ENDEVENT NAME EQ STRING DATE . EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 96

State 96:
event -> LESS ENDEVENT NAME EQ STRING DATE EQ . STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 97

State 97:
event -> LESS ENDEVENT NAME EQ STRING DATE EQ STRING . SLASH GREATER [ LESS ]
-- On SLASH shift to state 98

State 98:
event -> LESS ENDEVENT NAME EQ STRING DATE EQ STRING SLASH . GREATER [ LESS ]
-- On GREATER shift to state 99

State 99:
event -> LESS ENDEVENT NAME EQ STRING DATE EQ STRING SLASH GREATER . [ LESS ]
-- On LESS reduce production event -> LESS ENDEVENT NAME EQ STRING DATE EQ STRING SLASH GREATER 

State 100:
condition -> LESS CONDITION . NAME EQ STRING DISPOSE EQ STRING GREATER case LESS SLASH CONDITION GREATER [ LESS ]
-- On NAME shift to state 101

State 101:
condition -> LESS CONDITION NAME . EQ STRING DISPOSE EQ STRING GREATER case LESS SLASH CONDITION GREATER [ LESS ]
-- On EQ shift to state 102

State 102:
condition -> LESS CONDITION NAME EQ . STRING DISPOSE EQ STRING GREATER case LESS SLASH CONDITION GREATER [ LESS ]
-- On STRING shift to state 103

State 103:
condition -> LESS CONDITION NAME EQ STRING . DISPOSE EQ STRING GREATER case LESS SLASH CONDITION GREATER [ LESS ]
-- On DISPOSE shift to state 104

State 104:
condition -> LESS CONDITION NAME EQ STRING DISPOSE . EQ STRING GREATER case LESS SLASH CONDITION GREATER [ LESS ]
-- On EQ shift to state 105

State 105:
condition -> LESS CONDITION NAME EQ STRING DISPOSE EQ . STRING GREATER case LESS SLASH CONDITION GREATER [ LESS ]
-- On STRING shift to state 106

State 106:
condition -> LESS CONDITION NAME EQ STRING DISPOSE EQ STRING . GREATER case LESS SLASH CONDITION GREATER [ LESS ]
-- On GREATER shift to state 107

State 107:
condition -> LESS CONDITION NAME EQ STRING DISPOSE EQ STRING GREATER . case LESS SLASH CONDITION GREATER [ LESS ]
-- On LESS shift to state 108
-- On case shift to state 121

State 108:
case -> LESS . CASE EVENT EQ STRING TRIGGER EQ STRING DEFAULT EQ STRING SLASH GREATER [ LESS ]
-- On CASE shift to state 109

State 109:
case -> LESS CASE . EVENT EQ STRING TRIGGER EQ STRING DEFAULT EQ STRING SLASH GREATER [ LESS ]
-- On EVENT shift to state 110

State 110:
case -> LESS CASE EVENT . EQ STRING TRIGGER EQ STRING DEFAULT EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 111

State 111:
case -> LESS CASE EVENT EQ . STRING TRIGGER EQ STRING DEFAULT EQ STRING SLASH GREATER [ LESS ]
-- On STRING shift to state 112

State 112:
case -> LESS CASE EVENT EQ STRING . TRIGGER EQ STRING DEFAULT EQ STRING SLASH GREATER [ LESS ]
-- On TRIGGER shift to state 113

State 113:
case -> LESS CASE EVENT EQ STRING TRIGGER . EQ STRING DEFAULT EQ STRING SLASH GREATER [ LESS ]
-- On EQ shift to state 114
